<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Pharmacy Map Cyprus</string>
    <string name="contact_prompt">Your opinion matters to us. For improving our app and services please fill in the form with your ideas.\n\nThank you!</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="all_fields_are_necessary_prompt">All fields are mandatory!</string>
    <string name="send">Send</string>
    <string name="address">Address</string>
    <string name="night_pharmacy">Night pharmacy</string>
    <string name="full_name_empty">Full name cannot be empty.</string>
    <string name="email_empty">Email cannot be empty.</string>
    <string name="message_empty">Message cannot be empty.</string>
    <string name="email_sent_successfully">Email has been sent successfully!</string>
    <string name="email_sent_unsuccessfully">Email has not been sent. Please check your internet connection and try again.</string>
    <string name="fill_form_prompt">Please fill in all the fields above.</string>
    <string name="email_wrong">Email is not in the correct format.</string>
    <string name="full_name_wrong">Full name is not in the correct format.</string>
    <string name="location_access_not_granted_prompt">Location access has not been granted.</string>
    <string name="favorites_title">Favorites</string>
    <string name="all_pharmacies_title">All pharmacies</string>
    <string name="night_title">Night pharmacies today</string>
    <string name="night_title_btn">Night pharmacies\ntoday</string>
    <string name="districts">Districts</string>
    <string name="nicosia">Nicosia</string>
    <string name="limassol">Limassol</string>
    <string name="larnaca">Larnaca</string>
    <string name="paphos">Paphos</string>
    <string name="famagusta">Famagusta</string>
    <string name="save">Save</string>
    <string name="more">More</string>
    <string name="filters">Filters</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="privacy_policy_underlined"><u>privacy policy</u></string>
    <string name="ad_id" translatable="false">ca-app-pub-8620421729218548/3895085465</string>
    <string name="test_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="button" translatable="false">Button</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="greek" translatable="false">Ελληνικά</string>
    <string name="privacy_policy_start">"I accept the "</string>
    <string name="privacy_policy_end">.</string>
    <string name="main_menu">Main Menu</string>
    <string name="last_updated">Last Updated:</string>
    <string name="search_pharmacy">Search pharmacies</string>
    <string name="map">Pharmacy Map</string>
    <string name="cancel">Cancel</string>
    <string name="home_phone">Home phone</string>
    <string name="expand" translatable="false">Expand</string>
    <string name="get_directions">Get\nDirections</string>
    <string name="call_pharmacy">Call\nPharmacy</string>
    <string name="call_home">Call\nHome</string>
    <string name="closes_at">Closes at %s</string>
    <string name="opens_at">Opens at %s</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="distance">Distance</string>
    <string name="working_hours">Working Hours</string>
    <string name="settings">Settings</string>
    <string name="disconnected_opening_times">Unable to retrieve opening times info. Please check your connection status.</string>
    <string name="opens_on_monday">Opens on Monday</string>
</resources>