<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Support.ContactUsActivity">

    <LinearLayout
        style="@style/LinearLayoutMain">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/contactUsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/contact_us_title"
            app:titleMarginStart="24dp"
            android:nestedScrollingEnabled="true"
            app:logo="@drawable/ic_support"/>

        <TextView
            style="@style/TextViewStandard"
            android:text="@string/contact_prompt" />

        <EditText
            android:id="@+id/nameEditText"
            style="@style/EditTextStandard"
            android:autofillHints="name"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/EditTextStandard"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="2dp"
                app:ccpDialog_allowSearch="true"
                app:ccpDialog_backgroundColor="@color/white"
                app:ccpDialog_keyboardAutoPopup="false"
                app:ccp_contentColor="@color/black"
                app:ccp_countryPreference="CY"
                app:ccp_defaultLanguage="GREEK"
                app:ccp_defaultNameCode="CY"
                app:ccp_flagBorderColor="@color/black"
                app:ccp_showNameCode="false"
                app:ccp_textSize="18sp" />

            <EditText
                android:id="@+id/phoneEditText"
                style="@style/EditTextStandard"
                android:autofillHints="phone"
                android:hint="@string/phone"
                android:inputType="phone" />
        </LinearLayout>

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:entries="@array/spinnerCategories"
            android:minHeight="48dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/messageEditText"
            style="@style/EditTextStandard"
            android:gravity="start|top"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <TextView
            style="@style/TextViewWarning"
            android:layout_width="wrap_content"
            android:text="@string/all_fields_are_necessary_prompt" />

        <Button
            android:id="@+id/sendButton"
            style="@style/ButtonStandard"
            android:text="@string/send"/>
    </LinearLayout>
</ScrollView>