<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutMain"
    android:fitsSystemWindows="true"
    tools:context=".Pharmacy.DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/pharmacyActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:nestedScrollingEnabled="true"
        app:logo="@drawable/ic_person">

        <TextView
            android:id="@+id/pharmacyActivityToolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/full_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/pharmacyActivityAddressTextView"
        style="@style/TextViewAddress"
        android:hint="@string/address" />

    <TextView
        android:id="@+id/pharmacyActivityDistanceTextView"
        style="@style/TextViewDistance"
        android:hint="@string/distance" />

    <TextView
        android:id="@+id/pharmacyActivityPhoneTextView"
        style="@style/TextViewPhone"
        android:hint="@string/phone" />

    <TextView
        android:id="@+id/pharmacyActivityNightTextView"
        style="@style/TextViewNight"
        android:layout_marginBottom="10dp"
        android:text="@string/night_pharmacy"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/pharmacyActivityFragmentContainerView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:tag="mapFragment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="InefficientWeight" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/directionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/button"
            android:onClick="directionButtonCallback"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/btn_directions" />

        <ImageButton
            android:id="@+id/phoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/button"
            android:onClick="phoneButtonCallback"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/btn_call" />
    </LinearLayout>
</LinearLayout>

