<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewStandard"
    android:elevation="4dp"
    app:strokeWidth="1dip"
    app:strokeColor="@color/black">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/mapFilterDialogCancelButton"
            style="@style/CancelButtonStandard"
            android:contentDescription="@string/cancel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mapFilterDialogHeading"
            style="@style/TextViewHeading"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/filters"/>

        <RadioGroup
            android:id="@+id/mapFilterDialogRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mapFilterDialogHeading"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mapFilterDialogAllPharmaciesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_green"
                android:text="@string/all_pharmacies_title"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mapFilterDialogNightPharmaciesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_green"
                android:text="@string/night_title"/>
        </RadioGroup>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/mapFilterDialogRadioGroup"
            app:cardCornerRadius="10dp"
            app:strokeWidth="1dip"
            app:strokeColor="@color/black"
            android:elevation="4dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mapFilterDialogSaveButton"
            style="@style/ButtonStandard"
            android:minHeight="0dp"
            android:text="@string/save"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>

