<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutMain"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true"
    tools:context=".Pharmacy.view.MapsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mapsActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:nestedScrollingEnabled="true"
        app:title="@string/map"
        app:titleMarginStart="24dp"
        app:logo="@drawable/ic_map"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/pharmaciesMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/mapsActivityToolbar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Pharmacy.view.MapsActivity" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mapsActivityInfoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/mapsActivityExpandInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/more"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="expandInfoButtonCallback"
                android:src="@drawable/ic_chevron_down" />

            <include layout="@layout/layout_info"
                android:id="@+id/mapsActivityInfoLayout"
                android:layout_toLeftOf="@id/mapsActivityExpandInfoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>